Three rows Three columns

--- a/index.html
+++ b/index.html
@@ -5,13 +5,29 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./stylesheets/main-styles.css">
+    <link rel="stylesheet" href="./specifications/text/styles.md">
     <title>App Academy Times</title>
+    <div class="masthead">
+        <div class="masthead__menu-and-search">
+            <div class="masthead__menu">
+            <i class="fa fa-bars"></i>
+        </div>
+        <div class="masthead__menu">
+            <i class="fa fa-search"></i>
+        </div>
+    </div>
+        <div class="masthead__actions">action buttons</div>
+        <div class="masthead__technologies">little technologies</div>
+        <div class="masthead__date">date</div>
+        <div class="masthead__logo">today's paper</div>
+        <div class="masthead__paper">today's paper</div>
+    </div>
 </head>
 <main>
 
 </main>
 <footer></footer>
 <body>
-    
+
 </body>
 </html>
