--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./stylesheets/main-styles.css">
-    <link rel="stylesheet" href="./specifications/text/styles.md">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.12/css/all.css">
     <title>App Academy Times</title>
     <div class="masthead">
         <div class="masthead__menu-and-search">
